01-persistence-init/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nginx
  namespace: k8s-lab-01-persistence-unit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      volumes:
        - name: nginx-html-volume
          persistentVolumeClaim:
            claimName: nginx-html-pvc
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-html-volume
              mountPath: /usr/share/nginx/html
