01-persistence-init/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-nginx-service
  namespace: k8s-lab-01-persistence-unit
spec:
  selector:
    app: web-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
