01-persistence-init/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: k8s-lab-01-persistence-unit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: vessel-k8s-lab.local
    http:
      paths:
      - path: /01-persistence-unit
        pathType: Prefix
        backend:
          service:
            name: app-nginx-service
            port:
              number: 80
